--- a/PagPrincipal/index.html
+++ b/PagPrincipal/index.html
@@ -14,6 +14,22 @@
     <hr>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta ad quidem fuga, rem voluptas repellendus. Rem, veritatis officia. Deleniti ex suscipit molestiae illo earum. Illum laudantium ex repellendus quaerat nobis!</p>
-    
+
+     <h1>Formulário de Exemplo</h1>
+    <form action="" method="get" class="form-example">
+        <div class="form-example">
+          <label for="name">Qual o seu Nome: </label>
+          <input type="text" name="name" id="name" required>
+        </div>
+        <div class="form-example">
+          <label for="email">Digite seu E-mail: </label>
+          <input type="email" name="email" id="email" required>
+        </div>
+        <div class="form-example">
+          <input type="submit" value="Enviar">
+        </div>
+      </form>
+
+
 </body>
 </html>
