--- a/PagPrincipal/index.html
+++ b/PagPrincipal/index.html
@@ -18,7 +18,7 @@
      <h1>Formulário de Exemplo</h1>
     <form action="" method="get" class="form-example">
         <div class="form-example">
-          <label for="name">Digite o seu Nome: </label>
+          <label for="name">Digite seu Nome: </label>
           <input type="text" name="name" id="name" required>
         </div>
         <div class="form-example">
