--- a/PagPrincipal/index.html
+++ b/PagPrincipal/index.html
@@ -25,6 +25,10 @@
           <label for="email">Digite seu E-mail: </label>
           <input type="email" name="email" id="email" required>
         </div>
+	<div class="form-example">
+          <label for="pass">Digite sua Senha: </label>
+          <input type="password" name="pass" id="pass" required>
+        </div>
         <div class="form-example">
           <input type="submit" value="Enviar">
         </div>
